fix for flashing slides on mobile
- remove transform-style
- bump version

--- a/source/stylesheets/slideshows.css
+++ b/source/stylesheets/slideshows.css
@@ -5,10 +5,6 @@
   margin: 0 auto;
   width: 100%;
 }
-.slides {
-  transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
-}
 .flex-viewport {
   border-radius: 4px;
   -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
